fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,14 @@ body {
 	background: linear-gradient(to right, rgb(100, 52, 181), rgb(80, 166, 250));
 }
 
+h2 {
+	font-size: 3vw;
+}
+
+h4 {
+	font-size: 2vw;
+}
+
 .particles {
 	position: absolute;
 	right: 0;
